Grosse MAJ, permet de voir les modifications facilement (utilisation de templates)

--- a/TFC/client/main.css
+++ b/TFC/client/main.css
@@ -1,4 +1,5 @@
 body {
     padding: 100px;
     font-family: sans-serif;
+    background: url('https://rezarahemtola.com/wp-content/uploads/2019/08/desktop-3246124_960_720.jpg') fixed repeat;
 }
