pushing before saturday

--- a/TFC/client/main.css
+++ b/TFC/client/main.css
@@ -3,3 +3,7 @@ body {
     font-family: sans-serif;
     background: url('https://rezarahemtola.com/wp-content/uploads/2019/08/desktop-3246124_960_720.jpg') fixed repeat;
 }
+
+input.error{
+    background-color:rgb(255, 231, 231);
+}
