--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import "../node_modules/bulma/bulma.sass";
+
 
 // Update Bulma's global variables
 $navbar-item-img-max-height: 3rem;
@@ -11,5 +11,6 @@ a.navbar-item{
     display: flex;
 }
 
-// Import only what you need from Bulma
-@import "../node_modules/bulma/sass/components/navbar.sass";
+// Import only what you need from Bulmas
+@import "../node_modules/bulma/bulma.sass";
+//@import "../node_modules/bulma/sass/components/navbar.sass";
