--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -11,6 +11,5 @@ a.navbar-item{
     display: flex;
 }
 
-// Import only what you need from Bulmas
+// Import only what you need from Bulma
 @import "../node_modules/bulma/bulma.sass";
-//@import "../node_modules/bulma/sass/components/navbar.sass";
