first image preview in product and shop banners

--- a/TFC/client/main.css
+++ b/TFC/client/main.css
@@ -2314,6 +2314,9 @@ a.box:active {
   .image.is-128x128 {
     height: 128px;
     width: 128px; }
+  .image.is-150x150 {
+    height: 150px;
+    width: 150px; }
 
 .notification {
   background-color: whitesmoke;
