add buttons removed

--- a/TFC/client/main.css
+++ b/TFC/client/main.css
@@ -1,3 +1,6 @@
+.body {
+  background-color: #f8f9fa; }
+
 /*! bulma.io v0.8.0 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
