--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -5,6 +5,10 @@
 $navbar-item-img-max-height: 3rem;
 $dimensions: 16 24 32 48 64 96 128 150;
 
+.body{
+    background-color: #f8f9fa;
+}
+
 
 // Import only what you need from Bulma
 @import "../node_modules/bulma/bulma.sass";
