--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -3,11 +3,13 @@
 
 // Update Bulma's global variables
 $navbar-item-img-max-height: 3rem;
+$navbar-item-hover-color: #8cba51;
+
+$primary: #e47312;
+
+
 $dimensions: 16 24 32 48 64 96 128 150;
 
-.body{
-    background-color: #f8f9fa;
-}
 
 
 // Import only what you need from Bulma
