--- a/TFC/client/main.css
+++ b/TFC/client/main.css
@@ -3,15 +3,13 @@ body {
   min-height: 100vh; }
 
 #content-wrap {
-  padding-bottom: 10rem;
-  /* Footer height */ }
+  padding-bottom: 10rem; }
 
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 10rem;
-  /* Footer height */ }
+  height: 10rem; }
 
 /*! bulma.io v0.8.0 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
@@ -7116,5 +7114,5 @@ label.panel-block {
       padding: 18rem 1.5rem; } }
 
 .footer {
-  background-color: #fafafa;
+  background-color: #f3f3f3;
   padding: 0; }
