--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -50,7 +50,6 @@ body {
 // Full imports
 @import "../node_modules/bulma/sass/form/_all.sass";
 @import "../node_modules/bulma/sass/grid/_all.sass";
-@import "../node_modules/bulma/sass/elements/_all.sass";
 
 // Components
 @import "../node_modules/bulma/sass/components/card.sass";
@@ -58,6 +57,16 @@ body {
 @import "../node_modules/bulma/sass/components/message.sass";
 @import "../node_modules/bulma/sass/components/navbar.sass";
 @import "../node_modules/bulma/sass/components/tabs.sass";
+
+// Elements
+@import "../node_modules/bulma/sass/elements/button.sass";
+@import "../node_modules/bulma/sass/elements/container.sass";
+@import "../node_modules/bulma/sass/elements/icon.sass";
+@import "../node_modules/bulma/sass/elements/image.sass";
+@import "../node_modules/bulma/sass/elements/notification.sass";
+@import "../node_modules/bulma/sass/elements/other.sass";
+@import "../node_modules/bulma/sass/elements/tag.sass";
+@import "../node_modules/bulma/sass/elements/title.sass";
 
 // Layout
 @import "../node_modules/bulma/sass/layout/hero.sass";
