--- a/TFC/sass/mystyles.scss
+++ b/TFC/sass/mystyles.scss
@@ -11,6 +11,7 @@ $navbar-item-img-max-height: 3rem;
 // Colors
 $primary: #e47312;  // Primary color in orange
 $link: #8cba51;  // Links in green
+$success: #8cba51;  // Green
 
 // Inputs
 $input-focus-border-color: transparent;  // No border
