--- a/TFC/imports/UI/css/banners.css
+++ b/TFC/imports/UI/css/banners.css
@@ -1,4 +1,4 @@
-.shopBanner p#description, .productBanner p#description{
+.productBanner p#description{
     max-height: 100px;
     overflow: hidden;
 }
